# Simple_MCP_Server

./: .gitignore  PROJECT_PLAN.md  README.md  config.yaml  deploy.bat  deploy.sh  pyproject.toml  server.py  setup.py
core/: hello_secrets.py
examples/: __init__.py  sdk_client.py
modules/YA_Common/utils/: security.py
prompts/: __init__.py  hello_prompt.py  predict_prompt.py
resources/: __init__.py  hello_resource.py
tools/: __init__.py  hello_tool.py  time_series_models.py  time_series_tools.py
utils/: security.py
