[project]
name = "YA_MCPServer_Template"
version = "0.1.0"
description = "YA MCP Server Template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "art>=6.5",
    "black>=25.9.0",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.14.0",
    "pyyaml>=6.0.2",
    "ruff>=0.14.4",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "tools/**",
    "modules/**",
    "core/**",
    "prompts/**",
    "resources/**",
    "*.py",
    "*.yaml",
    "*.md",
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
